--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.7",
+    "@stripe/stripe-js": "^4.4.0",
     "axios": "^1.7.4",
     "lucide-react": "^0.436.0",
     "react": "^18.3.1",
