--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@reduxjs/toolkit": "^2.2.7",
     "@stripe/stripe-js": "^4.4.0",
     "axios": "^1.7.4",
+    "js-cookie": "^3.0.5",
     "lucide-react": "^0.436.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
